Release 1.1.0

Issue #10820 - NetCDF aggregation
- Stream engine will now aggregate the output from subjobs into one or more larger files

Release 1.0.3

Issue #11497 - Incorrectly building 2D string arrays
- Fixed an issue which caused some queries to abort when the requested stream contains string arrays

Release 1.0.2

Issue #11499 - Simplify overriding configuration values in Stream Engine
- Moved default configuration from config.py to config/default.py
- Created empty config/local.py to contain local config changes

Issue #11439 - Race condition in directory creation
- Fixed a potential race condition in directory creation

Story 1007 - 1.3.6.9.2 Cassandra Fault Resolution: Stream Engine Manager: code to manage product request and sub-request allocation to stream_engines
- Added /estimate endpoint to return file size and request time estimates.